# nginx-1.0.14_comment

./: .gitignore  CMakeLists.txt
my_test_modules/: CMakeLists.txt  config  ngx_http_mysubrequest_module.c.cpp  ngx_http_mytest_module.c  ngx_http_myupstream_module.c  ngx_http_myupstream_module.cpp
objs/: Makefile  autoconf.err  nginx  ngx_auto_config.h  ngx_modules.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt  ngx_config.h  ngx_core.h  ngx_cycle.c
src/event/: CMakeLists.txt  ngx_event_posted.c  ngx_event_posted.h
src/event/modules/: CMakeLists.txt
src/http/: CMakeLists.txt  ngx_http_write_filter_module.c
src/http/modules/: CMakeLists.txt  ngx_http_access_module.c  ngx_http_static_module.c  ngx_http_upstream_ip_hash_module.c
src/mail/: CMakeLists.txt
src/misc/: CMakeLists.txt
src/os/: CMakeLists.txt
src/os/unix/: CMakeLists.txt  ngx_aio_read.c  ngx_aio_write.c  ngx_posix_config.h  ngx_process_cycle.c
