set(SOURCE_FILES ngx_conf_file.c
		ngx_cycle.c
		nginx.h
		ngx_array.h
		ngx_array.c
		ngx_log.h
		ngx_cycle.h
		ngx_file.c
		ngx_cpuinfo.c
		ngx_connection.c
		ngx_list.c
		ngx_file.h
		ngx_config.h
		ngx_buf.c
		ngx_crc.h
		ngx_crypt.c
		ngx_inet.h
		ngx_hash.h
		ngx_conf_file.h
		ngx_crypt.h
		ngx_core.h
		ngx_crc32.c
		ngx_inet.c
		ngx_buf.h
		ngx_list.h
		ngx_hash.c
		ngx_connection.h
		ngx_log.c
		nginx.c
		ngx_crc32.h
		ngx_md5.c
		ngx_md5.h
		ngx_murmurhash.c
		ngx_murmurhash.h
		ngx_open_file_cache.h
		ngx_open_file_cache.c
		ngx_output_chain.c
		ngx_palloc.c
		ngx_palloc.h
		ngx_parse.c
		ngx_parse.h
		ngx_queue.c
		ngx_queue.h
		ngx_radix_tree.c
		ngx_radix_tree.h
		ngx_rbtree.c
		ngx_rbtree.h
		ngx_regex.c
		ngx_regex.h
		ngx_resolver.c
		ngx_resolver.h
		ngx_sha1.h
		ngx_shmtx.c
		ngx_shmtx.h
		ngx_slab.h
		ngx_slab.c
		ngx_spinlock.c
		ngx_string.h
		ngx_string.c
		ngx_times.c
		ngx_times.h)
add_executable(core ${SOURCE_FILES})
target_link_libraries(core os)
include_directories(. ../os/unix ../event ../../objs)
link_directories(${PROJECT_SOURCE_DIR}/objs/src)