set(SOURCE_FILES ngx_http_access_module.c
		ngx_http_addition_filter_module.c
		ngx_http_auth_basic_module.c
		ngx_http_autoindex_module.c
		ngx_http_browser_module.c
		ngx_http_charset_filter_module.c
		ngx_http_chunked_filter_module.c
		ngx_http_degradation_module.c
		ngx_http_dav_module.c
		ngx_http_empty_gif_module.c
		ngx_http_fastcgi_module.c
		ngx_http_flv_module.c
		ngx_http_geo_module.c
		ngx_http_geoip_module.c
		ngx_http_gzip_filter_module.c
		ngx_http_gzip_static_module.c
		ngx_http_headers_filter_module.c
		ngx_http_image_filter_module.c
		ngx_http_index_module.c
		ngx_http_limit_req_module.c
		ngx_http_limit_zone_module.c
		ngx_http_log_module.c
		ngx_http_map_module.c
		ngx_http_memcached_module.c
		ngx_http_mp4_module.c
		ngx_http_not_modified_filter_module.c
		ngx_http_proxy_module.c
		ngx_http_random_index_module.c
		ngx_http_range_filter_module.c
		ngx_http_realip_module.c
		ngx_http_referer_module.c
		ngx_http_rewrite_module.c
		ngx_http_scgi_module.c
		ngx_http_secure_link_module.c
		ngx_http_split_clients_module.c
		ngx_http_ssi_filter_module.c
		ngx_http_ssi_filter_module.h
		ngx_http_ssl_module.c
		ngx_http_ssl_module.h
		ngx_http_static_module.c
		ngx_http_stub_status_module.c
		ngx_http_sub_filter_module.c
		ngx_http_upstream_ip_hash_module.c
		ngx_http_userid_filter_module.c
		ngx_http_xslt_filter_module.c
		ngx_http_uwsgi_module.c)
add_executable(http_modules ${SOURCE_FILES})
include_directories(. ../../http)