set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe  -O -W -Wall -Wpointer-arith -Wno-unused-parameter -Wunused-function -Wunused-variable -Wunused-value -Werror -g ")

set(SOURCE_FILES ngx_atomic.h
		ngx_aio_read_chain.c
		ngx_channel.c
		ngx_alloc.h
		ngx_aio_write.c
		ngx_aio_write_chain.c
		ngx_aio_read.c
		ngx_alloc.c
		ngx_channel.h
		ngx_darwin_config.h
		ngx_daemon.c
		ngx_darwin.h
		ngx_darwin_init.c
		ngx_darwin_sendfile_chain.c
		ngx_errno.c
		ngx_errno.h
		ngx_files.c
		ngx_file_aio_read.c
		ngx_files.h
		ngx_freebsd.h
		ngx_freebsd_config.h
		ngx_freebsd_rfork_thread.c
		ngx_freebsd_init.c
		ngx_freebsd_rfork_thread.h
		ngx_freebsd_sendfile_chain.c
		ngx_gcc_atomic_amd64.h
		ngx_gcc_atomic_ppc.h
		ngx_gcc_atomic_sparc64.h
		ngx_gcc_atomic_x86.h
		ngx_linux.h
		ngx_linux_aio_read.c
		ngx_linux_config.h
		ngx_linux_init.c
		ngx_linux_sendfile_chain.c
		ngx_os.h
		ngx_posix_config.h
		ngx_posix_init.c
		ngx_process.c
		ngx_process_cycle.c
		ngx_process.h
		ngx_process_cycle.h
		ngx_pthread_thread.c
		ngx_readv_chain.c
		ngx_recv.c
		ngx_send.c
		ngx_setproctitle.c
		ngx_setproctitle.h
		ngx_shmem.c
		ngx_shmem.h
		ngx_socket.c
		ngx_socket.h
		ngx_solaris.h
		ngx_solaris_config.h
		ngx_solaris_init.c
		ngx_solaris_sendfilev_chain.c
		ngx_sunpro_amd64.il
		ngx_sunpro_atomic_sparc64.h
		ngx_sunpro_sparc64.il
		ngx_sunpro_x86.il
		ngx_thread.h
		ngx_time.c
		ngx_time.h
		ngx_udp_recv.c
		ngx_user.c
		ngx_writev_chain.c
		ngx_user.h
		rfork_thread.S)
add_executable(unix ${SOURCE_FILES})
include_directories(. ../../core ../../../objs ../../event)